# slambench

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  DatasetReader.h  Dockerfile  Explore_SLAMBench_Data.ipynb  LICENSE  Makefile  README.md  entry.sh  starter.py  starter.sh
benchmarks/: CMakeLists.txt  benchmarks.json  benchmarks.repos
benchmarks/open_vins/: CMakeLists.txt
filters/: CMakeLists.txt  identity.cpp  skip_frame.cpp
framework/: CMakeLists.txt
framework/makefiles/: README.md  benchmarks.makefile  brisk.make  ceres.make  cvd.make  dataset-utils.makefile  deps.makefile  download_benchmarks.py  download_datasets.py  eigen3.make  flann.make  freeimage.make  g2o.make  gcc.make  gcc7.make  gcc_cuda.make  gvars.make  libopencl-stub.make  opencv.make  opengv.make  openni.make  opentuner.make  pangolin.make  pcl.make  sophus.make  suitesparse.make  toon.make
framework/patchs/: OpenNI2_SLAMBench.patch  OpenNI_SLAMBench.patch  SensorKinect_SLAMBench.patch  freeimage.patch  libopencl-stub_SLAMBench.patch
framework/shared/: CMakeLists.txt
framework/shared/include/: ColumnWriter.h  ParameterComponent.h  ParameterManager.h  Parameters.h  ResultWriter.h  SLAMBenchAPI.h  SLAMBenchConfiguration.h  SLAMBenchConfigurationLifelong.h  SLAMBenchException.h  SLAMBenchFilterLibraryHelper.h  SLAMBenchLibraryHelper.h  SLAMBenchLibraryHelperLifelong.h  SLAMBenchUI.h  SLAMBenchUITypes.h  SLAMBenchUI_Pangolin.h  TimeStamp.h  math_types.h  sb_malloc.h  sysutils.h  timings.h  utils.h
framework/shared/include/io/: Event.h  FrameBuffer.h  FrameBufferSource.h  FrameFormat.h  FrameSource.h  IdentityFrame.h  InputInterface.h  InputInterfaceManager.h  PixelFormat.h  Pool.h  SLAMFile.h  SLAMFrame.h  SensorType.h
framework/shared/include/io/core/: Core.h
framework/shared/include/io/deserialisation/: Deserialiser.h  SLAMFileDeserialiser.h  SLAMFileHeaderDeserialiser.h  SLAMFrameDeserialiser.h  SensorCollectionDeserialiser.h
framework/shared/include/io/format/: DataFormatter.h  EventDataFormatter.h  ImageDataFormatter.h  PointCloud.h
framework/shared/include/io/openni15/: ONI15Frame.h  ONI15FrameStream.h  ONI15InputInterface.h
framework/shared/include/io/openni2/: ONI2Frame.h  ONI2FrameStream.h  ONI2InputInterface.h
framework/shared/include/io/realsense/: RealSense2Frame.h  RealSense2FrameStream.h  RealSense2InputInterface.h
framework/shared/include/io/sensor/: AccelerometerSensor.h  CameraSensor.h  CameraSensorFinder.h  DepthSensor.h  EventCameraSensor.h  GroundTruthSensor.h  GyroSensor.h  IMUSensor.h  LidarSensor.h  OdomSensor.h  PointCloudSensor.h  Sensor.h  SensorCollection.h  SensorDatabase.h  sensor_builder.h
framework/shared/include/io/serialisation/: SLAMFileHeaderSerialiser.h  SLAMFileSerialiser.h  SLAMFrameSerialiser.h  Serialiser.h
framework/shared/include/metrics/: ATEMetric.h  DepthEstimationMetric.h  DurationMetric.h  FrameData.h  MemoryMetric.h  Metric.h  MetricManager.h  MetricValue.h  Phase.h  PointCloudMetric.h  PowerMetric.h  RPEMetric.h
framework/shared/include/metrics/memory_utils/: CUDAMonitor.h
framework/shared/include/metrics/power_utils/: PAPIMonitor.h  PowerMonitor.h  XU3Monitor.h
framework/shared/include/outputs/: Output.h  OutputManager.h  OutputManagerWriter.h  PoseOutput.h  TrajectoryAlignmentMethod.h  TrajectoryInterface.h
framework/shared/include/values/: Value.h  ValueDispatch.h  ValueInterface.h  ValuePrinter.h
framework/shared/src/: ColumnWriter.cpp  ParameterComponent.cpp  ParameterManager.cpp  ResultWriter.cpp  SLAMBenchConfiguration.cpp  SLAMBenchConfigurationLifelong.cpp  SLAMBenchLibraryHelper.cpp  SLAMBenchUI_Pangolin.cpp  dummy_library.cpp  library_wrapper.cpp  lodepng.cpp  sb_malloc.cpp
framework/shared/src/io/: FrameBuffer.cpp  FrameBufferSource.cpp  FrameFormat.cpp  FrameSource.cpp  IdentityFrame.cpp  InputInterface.cpp  InputInterfaceManager.cpp  PixelFormat.cpp  SLAMFile.cpp  SLAMFrame.cpp
framework/shared/src/io/core/: Core.cpp
framework/shared/src/io/deserialisation/: Deserialiser.cpp  SLAMFileDeserialiser.cpp  SLAMFileHeaderDeserialiser.cpp  SLAMFrameDeserialiser.cpp  SensorCollectionDeserialiser.cpp
framework/shared/src/io/format/: DataFormatter.cpp  PointCloud.cpp
framework/shared/src/io/openni/: ONI2Frame.cpp  ONI2FrameStream.cpp  ONI2InputInterface.cpp  ONI2InputInterface_dummy.cpp
framework/shared/src/io/openni15/: ONI15Frame.cpp  ONI15FrameStream.cpp  ONI15InputInterface.cpp  ONI15InputInterface_dummy.cpp
framework/shared/src/io/realsense/: RealSense2Frame.cpp  (+2 more)
framework/shared/src/metrics/: ATEMetric.cpp  DepthEstimationMetric.cpp  DurationMetric.cpp  MemoryMetric.cpp  Metric.cpp  MetricManager.cpp  Phase.cpp  PointCloudMetric.cpp  PowerMetric.cpp  RPEMetric.cpp
framework/shared/src/outputs/: Output.cpp  OutputManager.cpp  OutputManagerWriter.cpp  TrajectoryAlignmentMethod.cpp  TrajectoryInterface.cpp
framework/shared/src/values/: Value.cpp  ValueDispatch.cpp  ValueInterface.cpp  ValuePrinter.cpp
framework/tools/: CMakeLists.txt  README.md
framework/tools/accuracy-tools/: CMakeLists.txt  pointcloud_aligner.cpp
framework/tools/dataset-tools/: BONN.cpp  CMakeLists.txt  DARPASubt.cpp  ETHI.cpp  EUROCMAV.cpp  ICL.cpp  ICLNUIM.cpp  KITTI.cpp  NSH.cpp  NewerCollege.cpp  OpenLORIS.cpp  SVO.cpp  TUM-ROS.cpp  TUM-ROSBAG.cpp  TUM.cpp  UZHFPV.cpp  VolumeDeform.cpp  dataset-generator.cpp  io-inspect.cpp  io-monoslam.cpp  io-readply.cpp  lodepng.h
framework/tools/dataset-tools/include/: BONN.h  DARPASubt.h  DatasetReader.h  ETHI.h  EUROCMAV.h  ICL.h  ICLNUIM.h  KITTI.h  NSH.h  NewerCollege.h  OpenLORIS.h  RegexPattern.h  SVO.h  TUM-ROS.h  TUM-ROSBAG.h  TUM.h  UZHFPV.h  VolumeDeform.h
framework/tools/filters/: identity.cpp  skip_frame.cpp
framework/tools/loaders/: CMakeLists.txt  benchmark_loader.cpp  lifelong_loader.cpp  pangolin_loader.cpp  slambench_app.cpp
framework/tools/profiling-tools/: CMakeLists.txt  OCLWrapper.cpp
framework/tools/python/: plotutils.py  readlog.py  slamlog.py  utils.py  violins.py
template/: CMakeLists.txt  Dockerfile
(+94 files in other folders)
